// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hasNextStage is true 1`] = `
<div
  className="layout-row flex-100 layout-align-center layout-wrap"
>
  <div
    className="stage_row layout-row flex-100 layout-align-center"
  >
    <div
      className="stage_box flex-none layout-column layout-align-start-center "
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-left clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Previous Step
      </p>
    </div>
    <div>
      <div
        className="line_box layout-row layout-align-center flex-none "
      >
        <div
          className="quote_line flex-none"
        />
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="1"
        >
          <div
            className="wrapper_shop_stage_current"
          >
            <div
              className="layout-column layout-align-center-center shop_stage_current flex-none "
            >
              <h3
                className="flex-none"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                  }
                }
              >
                 
                1
                 
              </h3>
            </div>
            <div
              className="shop_stage_current_border"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                }
              }
            />
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose shipment type
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="2"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              2
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Shipment Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="3"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              3
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            View Quotes
          </p>
        </div>
      </div>
    </div>
    <div
      className="stage_box flex-none layout-column layout-align-start-center"
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-right clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Next Step
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Need help?
      </p>
      <i
        className="fa fa-question-circle"
      />
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="layout-row flex-100 layout-align-center layout-wrap"
>
  <div
    className="stage_row layout-row flex-100 layout-align-center"
  >
    <div
      className="stage_box flex-none layout-column layout-align-start-center "
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-left clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Previous Step
      </p>
    </div>
    <div>
      <div
        className="line_box layout-row layout-align-center flex-none "
      >
        <div
          className="quote_line flex-none"
        />
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="1"
        >
          <div
            className="wrapper_shop_stage_current"
          >
            <div
              className="layout-column layout-align-center-center shop_stage_current flex-none "
            >
              <h3
                className="flex-none"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                  }
                }
              >
                 
                1
                 
              </h3>
            </div>
            <div
              className="shop_stage_current_border"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                }
              }
            />
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose shipment type
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="2"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              2
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Shipment Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="3"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              3
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            View Quotes
          </p>
        </div>
      </div>
    </div>
    <div
      className="stage_box flex-none layout-column layout-align-start-center"
    />
    <div
      className="flex-none layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Need help?
      </p>
      <i
        className="fa fa-question-circle"
      />
    </div>
  </div>
</div>
`;

exports[`state.showHelp is true 1`] = `
<div
  className="layout-row flex-100 layout-align-center layout-wrap"
>
  <div
    className="stage_row layout-row flex-100 layout-align-center"
  >
    <div
      className="stage_box flex-none layout-column layout-align-start-center "
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-left clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Previous Step
      </p>
    </div>
    <div>
      <div
        className="line_box layout-row layout-align-center flex-none "
      >
        <div
          className="quote_line flex-none"
        />
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="1"
        >
          <div
            className="wrapper_shop_stage_current"
          >
            <div
              className="layout-column layout-align-center-center shop_stage_current flex-none "
            >
              <h3
                className="flex-none"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                  }
                }
              >
                 
                1
                 
              </h3>
            </div>
            <div
              className="shop_stage_current_border"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                }
              }
            />
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose shipment type
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="2"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              2
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Shipment Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="3"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              3
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            View Quotes
          </p>
        </div>
      </div>
    </div>
    <div
      className="stage_box flex-none layout-column layout-align-start-center"
    />
    <div
      className="flex-none layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Need help?
      </p>
      <i
        className="fa fa-question-circle"
      />
    </div>
  </div>
  <HelpContact
    parentToggle={[Function]}
    t={[Function]}
    tenant={
      Object {
        "emails": Object {
          "sales": Object {
            "air": "sales@demo.com",
            "general": "sales@demo.com",
            "ocean": "sales@demo.com",
            "rail": "sales@demo.com",
          },
          "support": Object {
            "air": "imc.air@demo.com",
            "general": "support@demo.com",
            "ocean": "imc.sea@demo.com",
            "rail": "imc.rail@demo.com",
          },
        },
        "id": 123,
        "name": "ORGANIZATION_NAME",
        "phones": Object {
          "support": "ORGANIZATION_SUPPORT_PHONE",
        },
        "scope": Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        },
        "subdomain": "ORGANIZATION_SUBDOMAIN",
        "theme": Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        },
      }
    }
  />
</div>
`;

exports[`tenant.scope is falsy 1`] = `
<div
  className="layout-row flex-100 layout-align-center layout-wrap"
>
  <div
    className="stage_row layout-row flex-100 layout-align-center"
  >
    <div
      className="stage_box flex-none layout-column layout-align-start-center "
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-left clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Previous Step
      </p>
    </div>
    <div>
      <div
        className="line_box layout-row layout-align-center flex-none "
      >
        <div
          className="line flex-none"
        />
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="1"
        >
          <div
            className="wrapper_shop_stage_current"
          >
            <div
              className="layout-column layout-align-center-center shop_stage_current flex-none "
            >
              <h3
                className="flex-none"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                  }
                }
              >
                 
                1
                 
              </h3>
            </div>
            <div
              className="shop_stage_current_border"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                }
              }
            />
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose shipment type
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="2"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              2
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Shipment Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="3"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              3
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose Offer
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="4"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              4
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Final Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="5"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              5
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Complete Booking Request
          </p>
        </div>
      </div>
    </div>
    <div
      className="stage_box flex-none layout-column layout-align-start-center"
    />
    <div
      className="flex-none layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Need help?
      </p>
      <i
        className="fa fa-question-circle"
      />
    </div>
  </div>
</div>
`;

exports[`theme.bookingProcessImage is truthy 1`] = `
<div
  className="layout-row flex-100 layout-align-center layout-wrap"
>
  <div
    className="stage_row layout-row flex-100 layout-align-center"
  >
    <div
      className="stage_box flex-none layout-column layout-align-start-center "
      onClick={[Function]}
    >
      <div
        className="wrapper_shop_stage_current"
      >
        <div
          className="layout-column layout-align-center-center shop_stage_current flex-none "
        >
          <i
            className="flex-none fa fa-chevron-left clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </div>
        <div
          className="shop_stage_current_border"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <p
        className="flex-none stage_text"
      >
        Previous Step
      </p>
    </div>
    <div>
      <div
        className="line_box layout-row layout-align-center flex-none "
      >
        <div
          className="quote_line flex-none"
        />
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="1"
        >
          <div
            className="wrapper_shop_stage_current"
          >
            <div
              className="layout-column layout-align-center-center shop_stage_current flex-none "
            >
              <h3
                className="flex-none"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                  }
                }
              >
                 
                1
                 
              </h3>
            </div>
            <div
              className="shop_stage_current_border"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, undefined,undefined)",
                }
              }
            />
          </div>
          <p
            className="flex-none stage_text"
          >
            Choose shipment type
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="2"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              2
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            Shipment Details
          </p>
        </div>
        <div
          className="stage_box flex-none layout-column layout-align-start-center"
          key="3"
        >
          <div
            className="shop_stage_yet layout-column layout-align-center-center"
          >
            <h3
              className="flex-none"
            >
               
              3
               
            </h3>
          </div>
          <p
            className="flex-none stage_text"
          >
            View Quotes
          </p>
        </div>
      </div>
    </div>
    <div
      className="stage_box flex-none layout-column layout-align-start-center"
    />
    <div
      className="flex-none layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        Need help?
      </p>
      <i
        className="fa fa-question-circle"
      />
    </div>
  </div>
</div>
`;
